# rules_lint

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.aspect  MODULE.bazel  README-clang-tidy-pull-request.md  README.md  _typos.toml  clang-tidy.patch  configure.bat  eslint.sh  go.mod  go.sum  plugin.go
.bcr/: README.md  (+3 more)
docs/: BUILD.bazel  MODULE.bazel  assert_no_lint_warnings.md  buf.md  checkstyle.md  clang-tidy.md  cppcheck.md  defs.bzl  eslint.md  flake8.md  format.md  formatting.md  golangci-lint.md  keep_sorted.md  ktlint.md  lint_test.md  linting.md  mypy.md  pmd.md  pylint.md  ruff.md  rules.md  shellcheck.md  spotbugs.md  stylelint.md  tfsec.md  vale.md  yamllint.md
docs/superpowers/notes/: 2026-06-03-golangci-spike-findings.md
docs/superpowers/plans/: 2026-06-03-golangci-lint-hermetic-aspect.md
docs/superpowers/specs/: 2026-06-03-golangci-lint-hermetic-aspect-design.md
e2e/eslint/: .eslintrc.js  BUILD.bazel  MODULE.bazel  README.md  eslint.sh  lint.bzl  lint.sh  package.json  pnpm-lock.yaml
e2e/eslint/simple/: BUILD.bazel  file.ts
e2e/proto/: BUILD.bazel  WORKSPACE.bazel  buf-lint.sh  file.proto  lint.bzl
e2e/proto/some/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
example/: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .editorconfig  .eslintrc.cjs  .gitattributes  .golangci.yaml  .prettierrc  .pylintrc  .rubocop.yml  .ruby-version  .ruff.toml  .shellcheckrc  .standard.yml  .swcrc  .vale.ini  .yamllint  BUILD.bazel  Gemfile  MODULE.aspect  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  buf.yaml  checkstyle-suppressions.xml  checkstyle.xml  checkstyle_subdir.xml  configure.bat  download.cfg  eslint.config.mjs  go.mod  hello.bozo  ktlint-baseline.xml  lint.bzl  lint.sh  main.go  maven_install.json  package.json  (+13 more)
example/.aspect/: format.axl  lint.axl
example/formatters/: BUILD
example/patches/: aspect_rules_ts.patch
example/src/: BUILD.bazel  Bar.java  FileReaderUtil.java  Foo.java  README.md  call_non_callable.py  clean.css  config.json5  config.yaml  file-dep.ts  file.proto  file.ts  hello.c  hello.cpp  hello.cs  hello.css  hello.cu  hello.cue  hello.feature  hello.fs  hello.go  hello.graphql  hello.html.jinja  hello.jsonnet  hello.kt  hello.libsonnet  hello.proto  hello.rb  hello.rs  hello.scala  hello.sh  hello.sql  hello.swift  hello.tf  hello.toml  hello.vue  hello.xml  hello2.go  hello_helper.go  lint.ts  (+4 more)
example/terraform/: BUILD.bazel
example/test/: BUILD.bazel  fail-on-violation.bats  lint_test.bats  machine_test.bats  no_violations.ts  unsupported_operator.py
example/tools/: BUILD  bzlmod.bzl  java21.bazelrc  lint.bzl  rustfmt.bzl
examples/cpp/: .bazelrc  .clang-tidy  BUILD  MODULE.aspect  MODULE.bazel  README.md  lint.sh
examples/csharp/: MODULE.bazel  README.md  paket.dependencies  update-dotnet-deps.sh
examples/go/: .bazelrc  .golangci.yml  BUILD  MODULE.bazel  README.md
examples/go-module/: MODULE.bazel  go.mod
examples/groovy/: .bazeliskrc  .bazelrc  BUILD  MODULE.bazel  package.json  pnpm-lock.yaml
examples/java/: .bazelrc  BUILD.bazel  MODULE.aspect  MODULE.bazel  README.md  checkstyle-suppressions.xml  checkstyle.xml  lint.sh  pmd.xml  spotbugs-exclude.xml
examples/keep-sorted/: .bazelrc  MODULE.bazel  README.md
examples/kotlin/: .bazelrc  .bazelversion  .editorconfig  BUILD  MODULE.aspect  MODULE.bazel  README.md  ktlint-baseline.xml
examples/nodejs/: .bazelrc  .swcrc  .vale.ini  BUILD  MODULE.aspect  MODULE.bazel  README.md  REPO.bazel  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.cjs
examples/other_formatters/: BUILD  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  prettier.config.mjs  requirements.in  requirements.txt
examples/protobuf/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/python/: .bazelrc  .flake8  BUILD  MODULE.aspect  MODULE.bazel  README.md  pyproject.toml  requirements.in  requirements.txt
examples/qml/: .bazelrc  .qmlformat.ini  .qmllint.ini  BUILD  MODULE.bazel  README.md  requirements.in  requirements.txt
format/: BUILD.bazel  MODULE.aspect  README.md  defs.bzl  extensions.bzl  format.axl  multitool.lock.json  repositories.bzl
format/private/: BUILD.bazel  extensions.json  filter.jq  format.sh  formatter_binary.bzl  ls-files.sh  mirror_linguist_languages.sh
format/test/: BUILD.bazel  custom_args_test.sh  extensions.json  format_test.bats  ls-files_test.sh
lint/: BUILD.bazel  MODULE.aspect  README.md  assert_no_lint_warnings.bzl  assert_no_lint_warnings.sh  bandit.bzl  biome.bzl  buf.bzl  buildifier.bzl  checkstyle.bzl  clang_tidy.bzl  clang_tidy_wrapper.bash  clang_tidy_wrapper.sh  clang_versions.bzl  clippy.bzl  cppcheck.bzl  cppcheck_wrapper.bash  defs.bzl  eslint.bazel-formatter.js  eslint.bzl  eslint.stylish-formatter.js  eslint.workaround_17660.js  extensions.bzl  flake8.bzl  golangci-lint.bzl  golangci_lint.bzl  groovy.bzl  keep_sorted.bzl  ktlint.bzl  lint.axl  lint_aspect.bzl  lint_test.bzl  lint_test.sh  mirror_clang.sh  mirror_ruff.sh  mirror_ty.sh  mirror_vale.sh  multitool.lock.json  mypy.bzl  pmd.bzl  (+29 more)
lint/js/: BUILD.bazel  eslint.compact-formatter.js  eslint.stylish-formatter.js  package.json  pnpm-lock.yaml  stylelint.compactFormatter.mjs
lint/keep-sorted/: BUILD.bazel  go.mod  go.sum  tools.go
lint/private/: BUILD.bazel  js_linter_inputs.bzl  lint_aspect.bzl  machine_report_testing.bzl  patcher.bzl  patcher.mjs  patcher_action.bzl  patcher_binary.bzl  patcher_run.bzl
lint/rules_rust/: BUILD.bazel  MODULE.bazel  clippy.bzl  process_wrapper_wrapper.bash  rust.diagnostic-formatter.js
lint/rust/: BUILD.bazel  MODULE.bazel  README.md  clippy.bzl  patcher_run.bzl  process_wrapper_wrapper.bash  rust.cli.js  rust.diagnostic-formatter.js  rust.diagnostic-formatter.test.js
lint/sarif/: BUILD.bazel  statics_test.go
lint/scala/: MODULE.bazel  scalafix.bzl
lint/test/: BUILD.bazel  mypy_fake.sh  mypy_tests.bzl
release/: BUILD.bazel  release.bzl
(+468 files in other folders)
