module(
    name = "aspect_rules_lint",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.31.2")
bazel_dep(name = "aspect_rules_js", version = "1.32.2")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.7")

bazel_dep(name = "rules_go", version = "0.39.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.31.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps.from_file(go_mod = "//:go.mod")

go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/bazelbuild/bazelisk",
)

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "build_aspect_cli",
    "com_github_hashicorp_go_plugin",
    "com_github_manifoldco_promptui",
)
