# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "lint_test",
    bzl_library_target = "//lint:lint_test",
)

stardoc_with_diff_test(
    name = "buf",
    bzl_library_target = "//lint:buf",
)

stardoc_with_diff_test(
    name = "eslint",
    bzl_library_target = "//lint:eslint",
)

stardoc_with_diff_test(
    name = "flake8",
    bzl_library_target = "//lint:flake8",
)

stardoc_with_diff_test(
    name = "pmd",
    bzl_library_target = "//lint:pmd",
)

stardoc_with_diff_test(
    name = "format",
    bzl_library_target = "//format:defs",
)

stardoc_with_diff_test(
    name = "stylelint",
    bzl_library_target = "//lint:stylelint",
)

stardoc_with_diff_test(
    name = "ruff",
    bzl_library_target = "//lint:ruff",
)

stardoc_with_diff_test(
    name = "shellcheck",
    bzl_library_target = "//lint:shellcheck",
)

stardoc_with_diff_test(
    name = "vale",
    bzl_library_target = "//lint:vale",
)

stardoc_with_diff_test(
    name = "ktlint",
    bzl_library_target = "//lint:ktlint",
)

stardoc_with_diff_test(
    name = "clang-tidy",
    bzl_library_target = "//lint:clang_tidy",
)

update_docs(name = "update")
