# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load(":defs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "lint_test",
    bzl_library_target = "@aspect_rules_lint//lint:lint_test",
)

stardoc_with_diff_test(
    name = "buf",
    bzl_library_target = "@aspect_rules_lint//lint:buf",
)

stardoc_with_diff_test(
    name = "eslint",
    bzl_library_target = "@aspect_rules_lint//lint:eslint",
)

stardoc_with_diff_test(
    name = "flake8",
    bzl_library_target = "@aspect_rules_lint//lint:flake8",
)

stardoc_with_diff_test(
    name = "pylint",
    bzl_library_target = "@aspect_rules_lint//lint:pylint",
)

stardoc_with_diff_test(
    name = "keep_sorted",
    bzl_library_target = "@aspect_rules_lint//lint:keep_sorted",
)

stardoc_with_diff_test(
    name = "pmd",
    bzl_library_target = "@aspect_rules_lint//lint:pmd",
)

stardoc_with_diff_test(
    name = "checkstyle",
    bzl_library_target = "@aspect_rules_lint//lint:checkstyle",
)

stardoc_with_diff_test(
    name = "spotbugs",
    bzl_library_target = "@aspect_rules_lint//lint:spotbugs",
)

stardoc_with_diff_test(
    name = "format",
    bzl_library_target = "@aspect_rules_lint//format:defs",
)

stardoc_with_diff_test(
    name = "stylelint",
    bzl_library_target = "@aspect_rules_lint//lint:stylelint",
)

stardoc_with_diff_test(
    name = "ruff",
    bzl_library_target = "@aspect_rules_lint//lint:ruff",
)

stardoc_with_diff_test(
    name = "shellcheck",
    bzl_library_target = "@aspect_rules_lint//lint:shellcheck",
)

stardoc_with_diff_test(
    name = "vale",
    bzl_library_target = "@aspect_rules_lint//lint:vale",
)

stardoc_with_diff_test(
    name = "yamllint",
    bzl_library_target = "@aspect_rules_lint//lint:yamllint",
)

stardoc_with_diff_test(
    name = "ktlint",
    bzl_library_target = "@aspect_rules_lint//lint:ktlint",
)

stardoc_with_diff_test(
    name = "clang-tidy",
    bzl_library_target = "@aspect_rules_lint//lint:clang_tidy",
)

update_docs(name = "update")
